python-llfuse (0.40+dfsg-1) UNRELEASED; urgency=medium

  * Updated watch file to use pypi, and validate pgp signature.
  * Remove minified javascript files from upstream source.

 -- Nikolaus Rath <Nikolaus@rath.org>  Thu, 10 Jul 2014 21:34:34 -0700

python-llfuse (0.40-2) unstable; urgency=low

  * Some cosmetic fixes to debian/
  * Bumped standards version to 3.9.5, no other changes required.
  * Added force_xattr_api.diff to support compilation under GNU/kFreeBSD.

 -- Nikolaus Rath <Nikolaus@rath.org>  Wed, 27 Nov 2013 20:19:13 -0800

python-llfuse (0.40-1) unstable; urgency=low

  * New upstream release.

 -- Nikolaus Rath <Nikolaus@rath.org>  Tue, 26 Nov 2013 21:59:10 -0800

python-llfuse (0.39-1) unstable; urgency=low

  [ Nikolaus Rath ]
  * Bumped standards version to 3.9.4, no other changes required.
  * Bumped debhelper compatibility level to 9 to get support for
    dpkg-buildflags.
  * Added lintian override for hardening-no-fortify-functions,
    this is a false positive.
  * Build depend on newer Cython (> 0.16).
  * New upstream release.

  [ Jakub Wilk ]
  * Use canonical URIs for Vcs-* fields.

 -- Nikolaus Rath <Nikolaus@rath.org>  Sat, 11 May 2013 12:33:34 -0700

python-llfuse (0.37.1-2) unstable; urgency=low

  * Fix build failure, only call dh_sphinxdoc when building
    python-llfuse-doc package.

 -- Nikolaus Rath <Nikolaus@rath.org>  Thu, 22 Dec 2011 22:37:26 -0500

python-llfuse (0.37.1-1) unstable; urgency=low

  * New upstream release.

 -- Nikolaus Rath <Nikolaus@rath.org>  Sat, 10 Dec 2011 20:57:38 -0500

python-llfuse (0.36-2) unstable; urgency=low

  * Use dh_sphinxdoc. Closes: #637393.

 -- Nikolaus Rath <Nikolaus@rath.org>  Mon, 24 Oct 2011 19:36:59 -0400

python-llfuse (0.36-1) unstable; urgency=low

  * New upstream release.
  * Depend on Cython > 0.15.1, previous versions generated segfaulting
    code.
  * Breaks S3QL < 1.2, API changed in non-backwards compatible way.